# OddsHarvester

./: $LOGFILE  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  debug_page.py  pr_body.md  pyproject.toml  scraped_data.csv  scraped_data.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: release.yml  run_unit_tests.yml  scraper_health_check.yml
betfair-arbitrage-tool/: .env.example  README.md  requirements.txt
betfair-arbitrage-tool/src/models/: __init__.py  bet.py  market.py  opportunity.py
betfair-arbitrage-tool/src/web/: app.py
betfair-arbitrage-tool/src/web/templates/: dashboard.html
docs/: agentic-gotchas.md
docs/plans/: 2026-05-17-regional-base-url.md  2026-05-18-volleyball-support.md  2026-07-03-multi-proxy-rotation.md  2026-07-16-links-only-mode.md  2026-07-20-live-scraping.md  2026-07-20-seasons-list.md
docs/specs/: 2026-05-17-regional-base-url-design.md  2026-05-18-volleyball-support-design.md  2026-07-03-multi-proxy-rotation-design.md  2026-07-16-links-only-mode-design.md  2026-07-20-live-scraping-design.md  2026-07-20-seasons-list-design.md
scripts/: capture_top_predictions_fixture.py  fetch_free_proxies.py  validate_league.py
src/: main.py
src/cli/: cli_argument_handler.py  cli_argument_parser.py  cli_argument_validator.py
src/core/: base_scraper.py  browser_helper.py  odds_portal_market_extractor.py  odds_portal_scraper.py  odds_portal_selectors.py  playwright_manager.py  scraper_app.py  sport_market_registry.py  sport_period_registry.py  url_builder.py
src/oddsharvester/: __init__.py  __main__.py  lambda_handler.py  main.py
src/oddsharvester/cli/: __init__.py  cli.py  cli_argument_handler.py  cli_argument_parser.py  cli_argument_validator.py  constants.py  options.py  types.py  validators.py
src/oddsharvester/cli/commands/: __init__.py  community.py  historic.py  live.py  upcoming.py
src/oddsharvester/core/: base_scraper.py  browser_helper.py  exceptions.py  odds_portal_market_extractor.py  odds_portal_scraper.py  odds_portal_selectors.py  playwright_manager.py  retry.py  scrape_result.py  scraper_app.py  sport_market_registry.py  sport_period_registry.py  url_builder.py
src/oddsharvester/core/browser/: market_navigation.py  selection.py
src/oddsharvester/core/community/: community_constants.py  match_community_parser.py  match_community_scraper.py  row_helpers.py  top_predictions_parser.py  top_predictions_scraper.py  user_profile_parser.py  (+1 more)
src/oddsharvester/storage/: local_data_storage.py  remote_data_storage.py  storage_manager.py  storage_type.py
src/oddsharvester/utils/: command_enum.py  constants.py  league_aliases.py  local_kickoff.py  period_constants.py  proxy_manager.py  sport_league_constants.py  sport_market_constants.py  utils.py  venue_timezone_constants.py
src/utils/: bookies_filter_enum.py  league_aliases.py  period_constants.py  sport_league_constants.py  sport_market_constants.py  utils.py
tests/: test_website_layout.py
tests/cli/: test_bookies_filter_validation.py  test_cli_argument_handler.py  test_cli_argument_parser.py  test_cli_argument_validator.py  test_click_cli.py  test_community_command.py  test_historic_partial_collection.py  test_live_command.py  test_period_validation.py  test_validators_base_url.py  test_validators_markets.py  test_validators_proxy.py  test_validators_seasons.py
tests/core/: test_base_scraper.py  test_browser_helper.py  test_exceptions.py  test_market_grouping.py  test_navigation_manager.py  test_odds_history_extractor.py  test_odds_parser.py  test_odds_portal_market_extractor.py  test_odds_portal_scraper.py  test_odds_portal_selectors.py  test_playwright_manager.py  test_retry.py  test_scrape_result.py  test_scraper_app.py  test_scraper_app_base_url.py  test_sport_market_registry.py  test_submarket_extractor.py  test_url_builder.py
tests/core/browser/: test_market_navigation.py  test_selection.py
tests/core/community/: test_match_community_parser.py  test_match_community_scraper.py  test_row_helpers.py  test_top_predictions_parser.py  test_top_predictions_scraper.py  test_user_profile_parser.py  test_user_profile_scraper.py
tests/core/market_extraction/: test_line_tokens.py
tests/data/community/: top_predictions_football.html
tests/integration/: __init__.py  conftest.py  test_baseball.py  test_basketball.py  test_cli_options.py  test_community_extensions.py  test_community_predictions.py  test_cricket.py  test_football.py  test_handball.py  test_historic_current_season.py  test_live_snapshot.py  test_match_details_regression.py  test_tennis.py  test_volleyball.py
tests/integration/fixtures/: README.md
tests/integration/helpers/: __init__.py  capture.py  comparison.py  normalization.py
tests/storage/: test_local_data_storage.py  test_remote_data_storage.py  test_storage_manager.py  test_storage_type.py
tests/utils/: test_bookies_filter.py  test_league_aliases.py  test_local_kickoff.py  test_odds_format_enum.py  test_period_constants.py  test_period_registry.py  test_proxy_manager.py  test_sport_league_constants.py  test_sport_market_constants.py  test_utils.py  test_venue_timezone_constants.py
(+48 files in other folders)
