[project]
name = "oddsharvester"
version = "0.1.0"
description = "A Python application to scrape and manage odds data from OddsPortal website."
authors = [{ name = "Jordan TETE", email = "tetej171@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.21",
    "click>=8.1.0",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "pytz>=2025.2"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.scripts]
oddsharvester = "oddsharvester.cli.cli:main"

[project.urls]
Homepage = "https://github.com/jordantete/OddsHarvester"
Repository = "https://github.com/jordantete/OddsHarvester"
Issues = "https://github.com/jordantete/OddsHarvester/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-m 'not integration'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselected by default, run with: pytest -m integration)",
    "slow: marks tests as slow (>30 seconds)",
    "asyncio: marks tests as async tests",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src/oddsharvester", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
]
ignore = [
    "S101",   # assert used (OK in tests)
    "T201",   # print found (OK for CLI tool)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["oddsharvester"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Tests can use more flexible patterns
"tests/**" = ["S101", "S105", "S106", "S108", "PT011", "SIM117"]
# Lambda handler may need different patterns
"src/oddsharvester/lambda_handler.py" = ["T201"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
